learning/terraform/terraform-basics/udemy/handson-ec2/security_groups.tf
# Create a  security group
resource "aws_security_group" "nbt_security_group" {
  name        = "nbt-sg"
  description = "Allow SSH and HTTP inbound traffic"
  vpc_id      = aws_vpc.nbt_vpc.id

  ingress {
    description = "SSH"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "HTTP"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "nbt-sg"
  }
}
